@@ -55,55 +55,51 @@ public class SpaceDrillRecipes implements IRecipePool {
 
     @Override
     public void loadRecipes() {
-        List<List<FluidStack>> tierOutputFluids = Collections.unmodifiableList(
+        List<List<FluidStack>> tierOutputFluids = List.of(Collections.unmodifiableList(
             Arrays.asList(
-                Collections.unmodifiableList(
-                    Arrays.asList(
-                        Materials.Hydrogen.getGas(50000000),
-                        Materials.Helium.getGas(50000000),
-                        Materials.Nitrogen.getGas(50000000),
-                        Materials.Methane.getGas(5000000),
-                        Materials.SulfurDioxide.getGas(5000000),
-                        Materials.CarbonDioxide.getGas(5000000),
-                        Materials.NitrogenDioxide.getGas(5000000),
-                        Materials.Ammonia.getGas(5000000),
-                        Materials.Chlorine.getGas(50000000),
-                        Materials.Fluorine.getGas(50000000),
-                        Materials.CarbonMonoxide.getGas(50000000),
-                        Materials.Oxygen.getGas(50000000))),
-                Collections.unmodifiableList(
-                    Arrays.asList(
-                        FluidRegistry.getFluidStack("unknowwater", 500000),
-                        WerkstoffLoader.Neon.getFluidOrGas(500000),
-                        Materials.Argon.getGas(500000),
-                        WerkstoffLoader.Krypton.getFluidOrGas(500000),
-                        WerkstoffLoader.Xenon.getFluidOrGas(500000),
-                        Materials.Radon.getGas(500000),
-                        Materials.Helium3.getGas(50000000))),
-                Collections.unmodifiableList(
-                    Arrays.asList(
-                        Materials.Deuterium.getGas(5000000),
-                        Materials.Tritium.getGas(5000000),
-                        Materials.HeavyFuel.getFluid(5000000),
-                        Materials.LightFuel.getFluid(5000000),
-                        Materials.Naphtha.getFluid(5000000),
-                        Materials.Gas.getGas(50000000),
-                        new FluidStack(GTPPFluids.CoalGas, 5000000),
-                        new FluidStack(MaterialsElements.getInstance().BROMINE.getFluid(), 5000000),
-                        Materials.Oil.getFluid(5000000),
-                        Materials.OilHeavy.getFluid(500000),
-                        Materials.Lava.getFluid(50000000),
-                        Materials.SaltWater.getFluid(50000000),
-                        GTModHandler.getDistilledWater(50000000),
-                        new FluidStack(GTPPFluids.Pyrotheum, 500000),
-                        new FluidStack(GTPPFluids.Cryotheum, 500000),
-                        GTModHandler.getLiquidDNA(500000),
-                        Materials.HydrochloricAcid.getFluid(5000000),
-                        Materials.SulfuricAcid.getFluid(5000000),
-                        Materials.NitricAcid.getFluid(5000000),
-                        Materials.HydrofluoricAcid.getFluid(5000000),
-                        Materials.PhosphoricAcid.getFluid(5000000),
-                        Materials.PhthalicAcid.getFluid(5000000)))));
+                Materials.Hydrogen.getGas(50000000),
+                Materials.Helium.getGas(50000000),
+                Materials.Nitrogen.getGas(50000000),
+                Materials.Methane.getGas(5000000),
+                Materials.SulfurDioxide.getGas(5000000),
+                Materials.CarbonDioxide.getGas(5000000),
+                Materials.NitrogenDioxide.getGas(5000000),
+                Materials.Ammonia.getGas(5000000),
+                Materials.Chlorine.getGas(50000000),
+                Materials.Fluorine.getGas(50000000),
+                Materials.CarbonMonoxide.getGas(50000000),
+                Materials.Oxygen.getGas(50000000))), Collections.unmodifiableList(
+            Arrays.asList(
+                FluidRegistry.getFluidStack("unknowwater", 500000),
+                WerkstoffLoader.Neon.getFluidOrGas(500000),
+                Materials.Argon.getGas(500000),
+                WerkstoffLoader.Krypton.getFluidOrGas(500000),
+                WerkstoffLoader.Xenon.getFluidOrGas(500000),
+                Materials.Radon.getGas(500000),
+                Materials.Helium3.getGas(50000000))), Collections.unmodifiableList(
+            Arrays.asList(
+                Materials.Deuterium.getGas(5000000),
+                Materials.Tritium.getGas(5000000),
+                Materials.HeavyFuel.getFluid(5000000),
+                Materials.LightFuel.getFluid(5000000),
+                Materials.Naphtha.getFluid(5000000),
+                Materials.Gas.getGas(50000000),
+                new FluidStack(GTPPFluids.CoalGas, 5000000),
+                new FluidStack(MaterialsElements.getInstance().BROMINE.getFluid(), 5000000),
+                Materials.Oil.getFluid(5000000),
+                Materials.OilHeavy.getFluid(500000),
+                Materials.Lava.getFluid(50000000),
+                Materials.SaltWater.getFluid(50000000),
+                GTModHandler.getDistilledWater(50000000),
+                new FluidStack(GTPPFluids.Pyrotheum, 500000),
+                new FluidStack(GTPPFluids.Cryotheum, 500000),
+                GTModHandler.getLiquidDNA(500000),
+                Materials.HydrochloricAcid.getFluid(5000000),
+                Materials.SulfuricAcid.getFluid(5000000),
+                Materials.NitricAcid.getFluid(5000000),
+                Materials.HydrofluoricAcid.getFluid(5000000),
+                Materials.PhosphoricAcid.getFluid(5000000),
+                Materials.PhthalicAcid.getFluid(5000000))));
 
         List<MinerTierData> minerTiers = Arrays.asList(
             new MinerTierData(1, ItemList.MiningDroneUV.get(1), (int) TierEU.RECIPE_UV),
