@@ -15,7 +15,7 @@ public class ScriptLoader {
 
     public static void registry() {
 
-        List<IScriptLoader> scripts = new ArrayList<>(Arrays.asList(new ScriptTinkersConstruct()));
+        List<IScriptLoader> scripts = new ArrayList<>(List.of(new ScriptTinkersConstruct()));
 
         if (Mods.Avaritia.isModLoaded()) scripts.add(new ScriptAvaritia());
 
